src/test/resources/json/invalid_inputs/no_x.json.except
Robot's starting X position not given.